# Code-Sprouts-Hackathon-2025

./: .gitignore  README.md  config.py  main.py  pyproject.toml  rolling_evaluation_results.csv
backtest/: backtester.py
dataloader/: customPandasData.py  dataloader.py
fetcher/: data_fetcher.py
model/: random_forest_model.py
pipeline/: pipeline.py
src/: addressesCount.py  openInterest.py  priceOhlcv.py
src_folder/: addressesCount.csv  openInterest.csv  priceOhlcv.csv
strategy/: randomForestStrategy.py
