[project]
name = "balaena_quant"
version = "0.1.0"
description = ""
authors = [
    {name = "boonhao.chew"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "backtrader (>=1.9.78.123,<2.0.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "mplfinance (>=0.12.10b0,<0.13.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
